tenzir/integration/data/reference/cron/test_cron_errors/step_03.ref
error: bad cron expression: invalid value for at least one field
 --> <input>:1:6
  |
1 | cron 'E * * * * *' version
  |      ^^^^^^^^^^^^^ 
  |